@@ -9,6 +9,8 @@ Version 6.2
   * Improved robustness of forecast.ets() for explosive models with multiplicative trends.
   * Exogenous variables now passed to VAR forecasts
   * Increased maximum nmse in ets() to 30.
+  * Made tsoutliers() more robust to weak seasonality
+  * Changed tsoutliers() to use supsmu on non-seasonal and seasonally adjusted data.
 
 Version 6.1 (11 May 2015)
   * Made auto.arima more robust
